committing math on my own

--- a/js-practice.html
+++ b/js-practice.html
@@ -3,17 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>JavaScript practice</title>
 </head>
 <body>
   <h1>Your JavaScript page</h1>
   <p>Use your Inpsector to view your console.</p>
   <script>
     // Your code will go here
-    console.log("Let's do math");
-
+    console.log("Let's do math:");
     let x = 5;
-    console.log(x)
+    console.log(x);
+    let y = 3;
+    console.log(y);
+    let z = x * y;
+    console.log(z);
+
+    // Math on my own
+    let a = 3;
+    console.log(a);
+    let b = 5;
+    console.log(b);
+    let c = a + b;
+    console.log(c);
   </script>
 </body>
 </html>
