committing strings on my own

--- a/js-practice.html
+++ b/js-practice.html
@@ -25,6 +25,18 @@
     console.log(b);
     let c = a + b;
     console.log(c);
+
+    console.log('Working wth strings:')
+
+    let firstName = 'Olivia';
+    let middleName = 'Marie';
+    let lastName = 'Dilley';
+    let name = firstName + " " + middleName + " " + lastName;
+    console.log(name)
+
+    // Strings on my own
+    let greeting = 'My name is ' + name
+    console.log(greeting)
   </script>
 </body>
 </html>
