--- a/js-practice.html
+++ b/js-practice.html
@@ -31,12 +31,38 @@
     let firstName = 'Olivia';
     let middleName = 'Marie';
     let lastName = 'Dilley';
-    let name = firstName + " " + middleName + " " + lastName;
+    let name = firstName + ' ' + middleName + ' ' + lastName;
     console.log(name)
 
     // Strings on my own
     let greeting = 'My name is ' + name
     console.log(greeting)
+
+    // JS Functions
+    console.log('Using functions:')
+    // function to make square numberes
+    function makeSquare(theNumb) {
+      let squared = theNumb * theNumb;
+      return squared;
+    }
+    let try01 = makeSquare(3);
+    console.log(try01);
+    let try02 = makeSquare(4);
+    console.log(try02);
+    let try03 = makeSquare(19);
+    console.log(try03);
+
+    // Functions on my own
+    function makeName(firstName, middleName, lastName) {
+    let theName = firstName + ' ' + middleName + ' ' + lastName;
+    return theName;
+    }
+    let test01 = makeName('Jeremy', 'Allen', 'White')
+    console.log(test01)
+    let test02 = makeName('Roberto', '"Beto"', 'O\'Rourke')
+    console.log(test02)
+    let test03 = makeName('Sarah', 'Jessica', 'Parker')
+    console.log(test03)
   </script>
 </body>
 </html>
