committing for score compare update

--- a/js-practice.html
+++ b/js-practice.html
@@ -63,6 +63,34 @@
     console.log(test02)
     let test03 = makeName('Sarah', 'Jessica', 'Parker')
     console.log(test03)
+    console.log('Making better name function:')
+
+    // A better function to fix middle initials
+    function makeBetterName(firstName, middleName, lastName) {
+      if (middleName.length === 1) {
+        middleName = middleName + '.';
+      }
+      let fullName = firstName + ' ' + middleName + ' ' + lastName;
+      return fullName; 
+    }
+    console.log(makeBetterName("Joan", "Marie", "Larkin"));
+    console.log(makeBetterName("John", "F", "Kennedy"));
+    console.log(makeBetterName("George", "W", "Bush"))
+    
+    // Using if and else
+    console.log("scoreCompare function");
+    function scoreCompare(home, away) {
+      if (home > away) {
+        return "Home team wins!"
+      } else if (away === home) {
+        return "It was a tie"
+      } else {
+        return "Away team wins :("
+      }
+  }
+  console.log(scoreCompare(5,3));
+  console.log(scoreCompare(3,5));
+  console.log(scoreCompare(5,5));
   </script>
 </body>
 </html>
